# py-mpu6050-client

./: .gitignore  README.md  sensorclient.py  setup.cfg
sensorclient/: main.py  outlined_cube.py  sensorclient.py
