[metadata]
name = sensorclient
summary = MPU6050 demo
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@oddbit.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sensorclient

[entry_points]
console_scripts =
    sensorclient = sensorclient.main:main

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

[flake8]
ignore = E731
